[package]
name = "blurhash-py"
description = "A Python and rust library for encoding and decoding blurhash strings"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/jimexist/blurhash-py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blurhash_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
lazy_static = "1.5.0"
